Posts overlap on Mobile Header Fixing

--- a/sites/all/themes/corporateclean/css/720.css
+++ b/sites/all/themes/corporateclean/css/720.css
@@ -385,11 +385,11 @@ clear: both;
 
 #header {
     background: url("../images/headerBack.jpg") repeat-x scroll left top rgba(0, 0, 0, 0);
-    height: 91px;
+    height: 91px !important;
     overflow: visible;
     position: fixed;
     width: 100% !important;
-    z-index: 99;
+    z-index: 9999 !important;
 }
 
 #header .hdrRight {display:none;}
